Added some architecture fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # Default ignored files
 /shelf/
-/.idea/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
-/.idea/dataSources/
-/.idea/dataSources.local.xml
+/.idea/
 # My Configs
 /api/config.js
