--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.7.5",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "helmet": "^7.1.0",
     "knex": "^3.1.0",
+    "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
