--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^7.1.0",
     "knex": "^3.1.0",
     "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
